--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "components": "^0.1.0",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-scripts": "5.0.1",
+    "styled": "^1.0.0",
     "styled-components": "^5.3.5",
     "twin.macro": "^2.8.2",
     "typescript": "^4.7.4",
@@ -46,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
