--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.15",
+    "@types/react-calendar": "^3.5.1",
     "@types/react-dom": "^18.0.6",
     "components": "^0.1.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-redux": "^8.0.2",
